; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_wal.c_sqlite3WalBeginReadTransaction.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_wal.c_sqlite3WalBeginReadTransaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { i64, i32, %struct.TYPE_15__, %struct.TYPE_16__* }
%struct.TYPE_15__ = type { i64, %struct.TYPE_15__* }
%struct.TYPE_16__ = type { i64, %struct.TYPE_16__* }

@WAL_RETRY = common dso_local global i32 0, align 4
@SQLITE_BUSY = common dso_local global i32 0, align 4
@SQLITE_IOERR = common dso_local global i32 0, align 4
@SQLITE_PROTOCOL = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@SQLITE_ERROR_SNAPSHOT = common dso_local global i32 0, align 4
@WAL_CKPT_LOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3WalBeginReadTransaction(%struct.TYPE_18__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_18__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %13, %2
  %8 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %6, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %6, align 4
  %12 = call i32 @walTryBeginRead(%struct.TYPE_18__* %8, i32* %9, i32 0, i32 %11)
  store i32 %12, i32* %5, align 4
  br label %13

13:                                               ; preds = %7
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @WAL_RETRY, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %7, label %17

17:                                               ; preds = %13
  %18 = load i32, i32* %5, align 4
  %19 = and i32 %18, 255
  %20 = load i32, i32* @SQLITE_BUSY, align 4
  %21 = icmp eq i32 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @testcase(i32 %22)
  %24 = load i32, i32* %5, align 4
  %25 = and i32 %24, 255
  %26 = load i32, i32* @SQLITE_IOERR, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = call i32 @testcase(i32 %28)
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* @SQLITE_PROTOCOL, align 4
  %32 = icmp eq i32 %30, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 @testcase(i32 %33)
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* @SQLITE_OK, align 4
  %37 = icmp eq i32 %35, %36
  %38 = zext i1 %37 to i32
  %39 = call i32 @testcase(i32 %38)
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @walTryBeginRead(%struct.TYPE_18__*, i32*, i32, i32) #1

declare dso_local i32 @testcase(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
